--- a/styles/index.less
+++ b/styles/index.less
@@ -1,7 +1,8 @@
 @import 'resets.less';
 @import 'default.less';
+@import 'vars';
 
-/* post content */
+/* 文章内容 markdown 格式 */
 .post-content {
   p, div, code, pre, ol, ul, h2 {
     margin-bottom: 15px;
@@ -51,5 +52,103 @@
 
   h4 {
     font-size: 1em;
+  }
+}
+
+/* 内容块样式 */
+.main-block {
+  max-width: 700px;
+  width: 95%;
+  margin: 20px auto;
+  border: @seperator;
+  background-color: white;
+}
+
+/* 文章列表项样式 */
+.postSummary {
+  padding: 0 10px;
+  min-height: 160px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;;
+  .postSummary__upstairs {
+    display: flex;
+    padding-top: 10px;
+    flex: 1;
+    align-items: center;
+    .postCover {
+      display: flex;
+      background-color: #f7f7f7;
+      justify-content: center;
+      align-items: center;
+      height: 110px;
+      color: #CCCCCC;
+      font-size: 12px;
+      border: 0.5em #fff solid;
+      box-shadow: rgba(0,0,0,0.15) 0 1px 4px;
+      width: 180px;
+      background-size: cover;
+      margin: 1px 10px 1px 1px;
+    }
+    .postTitleAndContent {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      align-self: stretch;
+      h1 {
+        margin-bottom: 5px;
+        font-size: 20px;
+      }
+      p {
+        display: flex;
+        flex: 1;
+        font-size: 13px;
+        line-height: 20px;
+        align-items: center;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
+    }
+  }
+  .postSummary__downstairs {
+    display: flex;
+    height: 40px;
+    align-items: center;
+  }
+  border-bottom: @seperator;
+}
+
+/* Page Header */
+.header {
+   display: flex;
+   alignItems: stretch;
+   background: #1b1920;
+   padding: 0 45px;
+   height: 66px;
+}
+
+/* post wrapper */
+.post-wrapper {
+  line-height: 1.4rem;
+  font-size: 14px;
+}
+
+/* 响应式内容 */
+@media (max-width: 414px) {
+  .main-block {
+    width: 100%;
+  }
+  .postCover {
+    display: none!important;
+    width: 0px!important;
+    margin: 0!important;
+    padding: 0!important;
+    border: none!important;
+  }
+}
+
+@media (max-width: 500px) {
+  .header {
+    padding: 0 5px;
   }
 }
