--- a/styles/index.less
+++ b/styles/index.less
@@ -55,11 +55,24 @@
   }
 }
 
+/* 主体部分布局 */
+.content-wrapper {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.sidebar {
+  width: 250px;
+}
+
 /* 内容块样式 */
-.main-block {
+.main {
   max-width: 700px;
   width: 95%;
-  margin: 20px auto;
+  margin-right: 5px;
   border: @seperator;
   background-color: white;
 }
@@ -133,9 +146,35 @@
   font-size: 14px;
 }
 
+/* profile */
+.profile {
+  background-color: #ffffff;
+  border: @seperator;
+  .profile__basic {
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-bottom: @seperator;
+    .profile__name {
+      margin: 10px 0;
+    }
+    .profile__signature {
+      font-size: 13px;
+      color: #9D9D9D;
+      font-style: italic;
+    }
+  }
+  .profile__sns {
+    display: flex;
+    padding: 8px 20px;
+    justify-content: space-around;
+  }
+}
+
 /* 响应式内容 */
 @media (max-width: 414px) {
-  .main-block {
+  .main {
     width: 100%;
   }
   .postCover {
