--- a/static/styles.css
+++ b/static/styles.css
@@ -319,6 +319,7 @@ Original highlight.js style (c) Ivan Sagalaev <maniac@softwaremaniacs.org>
 }
 .postSummary .postSummary__downstairs {
   display: flex;
+  padding-left: 4px;
   height: 40px;
   align-items: center;
 }
@@ -359,6 +360,32 @@ Original highlight.js style (c) Ivan Sagalaev <maniac@softwaremaniacs.org>
   display: flex;
   padding: 8px 20px;
   justify-content: space-around;
+}
+.pagination {
+  display: flex;
+  list-style: none;
+  flex-direction: row;
+  justify-content: space-between;
+  font-size: 14px;
+  padding: 0px 20px;
+  flex-wrap: wrap;
+  margin: 10px 0;
+}
+.pagination li {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  margin: 5px 0;
+}
+.pagination li:not(.break) a {
+  display: inline-block;
+  border: 1px solid #f0f2f7;
+  border-radius: 3px;
+  padding: 8px 10px;
+  outline: none;
+}
+.pagination li.selected a {
+  color: #cccccc;
 }
 /* 响应式内容 */
 @media (max-width: 414px) {
