--- a/styles/index.less
+++ b/styles/index.less
@@ -1,5 +1,6 @@
-@import 'resets.less';
-@import 'default.less';
+@import 'resets';
+@import 'default';
+@import 'nprogress';
 @import 'vars';
 
 /* 文章内容 markdown 格式 */
