--- a/styles/index.less
+++ b/styles/index.less
@@ -66,6 +66,7 @@
 }
 
 .sidebar {
+  margin-left: 5px;
   width: 250px;
 }
 
@@ -73,7 +74,6 @@
 .main {
   max-width: 700px;
   width: 95%;
-  margin-right: 5px;
   border: @seperator;
   background-color: white;
 }
