--- a/static/styles.css
+++ b/static/styles.css
@@ -376,6 +376,7 @@ Original highlight.js style (c) Ivan Sagalaev <maniac@softwaremaniacs.org>
 .postSummary .postSummary__upstairs .postTitleAndContent h1 {
   margin-bottom: 5px;
   font-size: 20px;
+  line-height: 25px;
 }
 .postSummary .postSummary__upstairs .postTitleAndContent p {
   display: flex;
