--- a/styles/index.less
+++ b/styles/index.less
@@ -112,6 +112,7 @@
       h1 {
         margin-bottom: 5px;
         font-size: 20px;
+        line-height: 25px;
       }
       p {
         display: flex;
